feat: dockerize app

--- a/app/Makefile
+++ b/app/Makefile
@@ -32,3 +32,27 @@ lint-fix:
 
 test:
 	NODE_ENV=test npm test -s
+
+compose:
+	docker compose up -d
+
+compose-test:
+	docker compose -f ./docker-compose.yml up --abort-on-container-exit --exit-code-from app
+
+compose-build:
+	docker compose build
+
+compose-logs:
+	docker compose logs -f
+
+compose-down:
+	docker compose down --remove-orphans || true
+
+compose-clear:
+	docker compose down -v --remove-orphans || true
+
+compose-stop:
+	docker compose stop || true
+
+compose-restart:
+	docker compose restart
