feat: add production Docker configuration

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,10 @@
 services:
   app:
-    extends:
-      file: docker-compose.yml
-      service: app
+    build:
+      context: .
+      dockerfile: Dockerfile
     command: ["make", "dev"]
     ports:
       - 8080:8080
+    volumes:
+      - ./app:/app
