--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   app:
-    build: .
-    volumes:
-      - .:/app
+    build:
+      context: .
+      dockerfile: Dockerfile.production
     command: ["make", "test"]
+    image: kwaket38/devops-for-developers-project-74:latest
