--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,6 +15,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -24,10 +27,11 @@ jobs:
       - name: Run tests
         run: make ci
 
-      - name: Build App
+      - name: Build App and push
         uses: docker/build-push-action@v3
         with:
           context: .
           file: Dockerfile.production
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: kwaket38/devops-for-developers-project-74:latest
