--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -5,6 +5,12 @@ on:
     branches:
       - main
 
+env:
+  DATABASE_USERNAME: postgres
+  DATABASE_PASSWORD: postgres
+  DATABASE_NAME: postgres
+  DATABASE_HOST: db
+
 jobs:
   build:
     runs-on: ubuntu-latest
